feat/アイテム削除のバックエンド追加
